alignment issue w cards on desktop

--- a/src/components/ProjectCard/ProjectCard.module.scss
+++ b/src/components/ProjectCard/ProjectCard.module.scss
@@ -22,6 +22,11 @@
     padding: 1.5rem;
   }
 
+  footer {
+    margin-top: auto;
+  }
+
+
   .title {
     display: flex;
     justify-content: space-between;
